--- a/app/client/src/components/layout/styles/Navbar.module.scss
+++ b/app/client/src/components/layout/styles/Navbar.module.scss
@@ -6,7 +6,7 @@
     background-color: var(--color-primary);
     font-weight: 500;
     font-size: var(--fs-400);
-    overflow: hidden;
+    overflow: visible;
 }
 
 .logo,
@@ -48,8 +48,6 @@
         margin: 0;
         list-style: none;
         gap: 1.5em;
-        display: flex;
-        flex-direction: row;
 
         li {
             white-space: nowrap;
@@ -79,30 +77,3 @@ a {
         display: none;
     }
 }
-
-
-
-
-// .logo:hover {
-//     filter: drop-shadow(0 0 2em #646cffaa);
-// }
-
-// .logo.react:hover {
-//     filter: drop-shadow(0 0 2em #61dafbaa);
-// }
-
-// @keyframes logo-spin {
-//     from {
-//         transform: rotate(0deg);
-//     }
-
-//     to {
-//         transform: rotate(360deg);
-//     }
-// }
-
-// @media (prefers-reduced-motion: no-preference) {
-//     a:nth-of-type(2) .logo {
-//         animation: logo-spin infinite 20s linear;
-//     }
-// }
