--- a/app/client/src/components/layout/styles/Utils.module.scss
+++ b/app/client/src/components/layout/styles/Utils.module.scss
@@ -1,18 +1,30 @@
 .pageWrapper {
-    min-height: 100vh;
-    min-width: auto;
+    height: 100vh;
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 
-.content{
+.content {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    flex-grow: 1;
-    height: 100vh;
+    flex: 1;
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .mainContent {
     flex: 1;
-    padding: 1rem 1rem 1rem 1rem;
+    padding: 1rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+    box-sizing: border-box;
+    max-width: 100%;
+    height: 100%;
 }
-
