--- a/app/client/src/components/resource/styles/Login.module.scss
+++ b/app/client/src/components/resource/styles/Login.module.scss
@@ -41,14 +41,14 @@
 
 .dropdown {
     float: left;
-    overflow: hidden;
+    overflow: visible;
     align-items: center;
     flex: 1;
     height: 100%;
     box-sizing: border-box;
     // padding-right: .75rem;
 
-    //position: relative;
+    position: relative;
 }
 
 .user {
@@ -102,6 +102,8 @@
 .dropdownContent {
     display: none;
     position: absolute;
+    top: 100%;
+    right: 0;
     background-color: #e4e4e6;
     //box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -173,12 +175,6 @@
     z-index: 9999;
     /* A high value to ensure it's on top */
 }
-
-
-
-
-
-
 
 .loginButton {
     font-weight: 500;
