--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -1,9 +1,15 @@
 html,
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
-  min-height: 100vh;
-  width: 100vw;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 :root {
@@ -48,6 +54,22 @@ body {
     --fs-350: .375rem;
     --fs-300: .25rem;
   }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+#root {
+  width: 100%;
+  max-width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 /* a {
